--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 #toastr {
   position: fixed;
   right: 0px;
@@ -61,4 +65,24 @@
   100% {
     transform: translate(110%, 0);
   }
+}
+
+h1 {
+  @apply font-extrabold text-transparent text-5xl bg-clip-text bg-gradient-to-r from-blue-400 to-green-600 pb-5;
+}
+
+h4 {
+  @apply font-extrabold text-transparent text-2xl bg-clip-text bg-gradient-to-r from-gray-800 to-green-300 pb-5;
+}
+
+.spinner-grow {
+  @apply animate-ping inline-flex h-3 w-3 rounded-full bg-sky-400 opacity-75;
+}
+
+.card {
+  @apply text-gray-800 bg-green-50 px-8 py-6 mb-3 h-full;
+}
+
+.btn {
+  @apply px-3 py-2 border hover:bg-gray-200 rounded-md outline-slate-400;
 }
